<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>

    <string name="try_button_title">Try again</string>

    <!-- Messages -->
    <string name="no_network_message">No network connection\nPlease turn Wi-Fi or mobile data on\n
        and press "TRY AGAIN" button"\n
        OR select Favorite Movies in Settings
    </string>
    <string name="error_loading_movies_list_message">An error has occurred. Please try again later</string>
    <string name="error_loading_trailer_collection">Error loading trailers</string>
    <string name="error_loading_backdrop_collection">Error loading backdrops</string>
    <string name="error_loading_review_collection">Error loading reviews</string>
    <string name="error_loading_movie_info">Error loading Movie Information</string>
    <string name="error_no_player">No appropriate Application to show trailer</string>
    <string name="error_loading_trailers">Error loading trailers</string>
    <string name="error_loading_reviews">Error loading reviews</string>

    <string name="added_to_favorites">Movie was added to the Favorite Collection</string>
    <string name="removed_from_favorites">Movie was removed from the Favorite Collection</string>

    <string name="info_not_available">Not Available</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_sort_mode">Sort Mode</string>

    <!-- content description -->
    <string name="content_description_backdrop">Backdrop image</string>
    <string name="content_description_poster">Poster image</string>

    <string name="transition_poster" translatable="false">poster_transition</string>

    <!-- formatters -->
    <string name="json_date_format" translatable="false">
        <xliff:g id="data">yyyy-MM-dd</xliff:g>
    </string>

    <string name="release_date_format" translatable="false">
        <xliff:g id="data">MMMM, yyyy</xliff:g>
    </string>

    <string name="runtime_format" translatable="false">
        <xliff:g id="hours">%1$d</xliff:g>h
        <xliff:g id="minutes">%2$d</xliff:g>m
    </string>

    <!-- TabLayout labels -->
    <string name="label_movie_info">INFO</string>
    <string name="label_movie_trailers">TRAILERS</string>
    <string name="label_movie_reviews">REVIEWS</string>

    <!--  Movie Info Fragment  -->
    <string name="label_language">Language</string>
    <string name="label_runtime">Runtime</string>
    <string name="label_original_title">Original title:</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_budget">Budget:</string>
    <string name="label_revenue">Revenue:</string>
    <string name="label_home_page">Home page:</string>


</resources>
