<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="movieDetail"
            type="dmtr.pimenov.popularmovies.data.model.MovieDetail" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="dmtr.pimenov.popularmovies.ui.fragment.ReviewsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/block_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/block_2"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/pictogram_size"
                    android:layout_height="@dimen/pictogram_size"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_themvdb_logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:textStyle="bold"
                        app:ratingString="@{movieDetail.voteAverage}"
                        tools:text="4.2/10" />

                    <RatingBar
                        android:id="@+id/rating_movie_rating"
                        style="?android:ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.5"
                        app:stars="@{movieDetail.voteAverage}"
                        tools:rating="2.5" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/block_3"
                app:layout_constraintStart_toEndOf="@id/block_1"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/pictogram_size"
                    android:layout_height="@dimen/pictogram_size"
                    android:layout_marginStart="@dimen/default_margin"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_language" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/language_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:text="@string/label_language"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:textStyle="bold"
                        app:language="@{movieDetail.originalLanguage}"
                        tools:text="English" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/block_2"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/pictogram_size"
                    android:layout_height="@dimen/pictogram_size"
                    android:layout_marginStart="@dimen/default_margin"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_av_timer" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/runtime_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:text="@string/label_runtime"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:textStyle="bold"
                        app:runtime="@{movieDetail.runtime}"
                        tools:text="1h 35m" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@color/colorLightGrayDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block_1" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_margin"
                android:text="@{movieDetail.overview}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Very long text" />

            <TextView
                android:id="@+id/text_original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/double_margin"
                android:text="@string/label_original_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_overview" />

            <TextView
                android:id="@+id/text_original_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:text="@{movieDetail.originalTitle}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_original_title_label"
                app:layout_constraintTop_toBottomOf="@id/text_overview"
                tools:text="Original Title" />

            <TextView
                android:id="@+id/text_release_date_full_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/label_release_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_original_title" />

            <TextView
                android:id="@+id/text_release_date_full"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintStart_toEndOf="@id/text_release_date_full_label"
                app:layout_constraintTop_toBottomOf="@id/text_original_title"
                app:releaseDateFull="@{movieDetail.releaseDate}"
                tools:text="2014-12-21" />

            <TextView
                android:id="@+id/text_budget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/label_budget"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_release_date_full_label" />

            <TextView
                android:id="@+id/text_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintStart_toEndOf="@id/text_budget_label"
                app:layout_constraintTop_toBottomOf="@id/text_release_date_full_label"
                app:money="@{movieDetail.budget}"
                tools:text="1000 000" />

            <TextView
                android:id="@+id/text_revenue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/label_revenue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_budget_label" />

            <TextView
                android:id="@+id/text_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintStart_toEndOf="@id/text_revenue_label"
                app:layout_constraintTop_toBottomOf="@id/text_budget_label"
                app:money="@{movieDetail.revenue}"
                tools:text="10 000 000" />

            <TextView
                android:id="@+id/text_homepage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/label_home_page"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_revenue_label" />

            <TextView
                android:id="@+id/text_homepage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:autoLink="web"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_homepage_label"
                app:layout_constraintTop_toBottomOf="@id/text_revenue_label"
                app:text='@{TextUtils.isEmpty(movieDetail.homepage) ? "N/A" : movieDetail.homepage}'
                tools:text="www.google.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>